--- a/app/globals.css
+++ b/app/globals.css
@@ -36,7 +36,7 @@ body {
 /* @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap'); */
 
 :root {
-  --background: 0, 0%, 96.078%; /* 0, 0%, 95.686%; - #F4F4F4 */ /* 210 20% 98% */
+  --background: 240, 6.667%, 97.059%; /* 0, 0%, 96.078%; - #F5F5F5 */ /* 0, 0%, 95.686%; - #F4F4F4 */ /* 210 20% 98% */
   --foreground: 220 25% 10%;
 
   --card: 0 0% 100%;
@@ -60,7 +60,7 @@ body {
   --destructive: 0 72% 51%;
   --destructive-foreground: 0 0% 100%;
 
-  --border: 0, 0%, 0%, 0.09 /* 30, 4.348%, 90.98% */ /* 210 20% 90% */;
+  --border: 0, 0%, 0%, 0.08 /* 30, 4.348%, 90.98% */ /* 210 20% 90% */;
   --input: 210 20% 90%;
   --ring: 173 80% 40%;
 
@@ -404,4 +404,17 @@ body {
 
 button {
   cursor: pointer !important;
+}
+
+.bg-input {
+  background: rgba(255,255,255, 0.5);
+  /* box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 1px 0px, rgba(60, 58, 52, 0.16) 0px 0px 0px 1px, rgba(60, 58, 52, 0.08) 0px 2px 5px 0px; */
+}
+
+/* .bg-background {
+  background: rgba(0,0,0, 0.01);
+} */
+
+.border-input {
+  border-color: rgba(0,0,0, 0.21);
 }
