--- a/app/(Landing)/home.css
+++ b/app/(Landing)/home.css
@@ -6,7 +6,8 @@
 
 :root:has([data-theme="landing"]) {
   /* Base Color Values */
-  --background: 0 0% 100%;
+  /* --background: 0 0% 100%; */
+  --background: 193.2, 37.3%, 73.7%;
   --foreground: 210 11% 15%;
   --card: 150 10% 98%;
   --card-foreground: 210 11% 15%;
