--- a/app/(Dashboard)/dashboard.css
+++ b/app/(Dashboard)/dashboard.css
@@ -8,10 +8,15 @@
 /* @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap'); */
 
 :root:has([data-theme="dashboard"]) {
-  --background: 0, 0%, 97.65%; /* - #F9F9F9 */ /* 240, 6.667%, 97.059% - #F7F7F8 */ /* 0, 0%, 96.078%; - #F5F5F5 */ /* 0, 0%, 95.686%; - #F4F4F4 */ /* 210 20% 98% */
+  /* --background: 0, 0%, 97.65%; */ /* - #F9F9F9 */ /* 240, 6.667%, 97.059% - #F7F7F8 */ /* 0, 0%, 96.078%; - #F5F5F5 */ /* 0, 0%, 95.686%; - #F4F4F4 */ /* 210 20% 98% */
+  /* --background: 195 20% 95.3% / 0.65; */ /* #F9F9F9 + (#A3CAD5, 0.1) = #F1F4F5 */
+  /* --background: 200 23% 97%; */ /* (#F9F9F9 + (#A3CAD5, 0.1)) / 0.65 = #F6F8F9 */
+  /* --background: 180 20% 97%; */ /* (#F9F9F9 + (#A3CAD5, 0.1)) / 0.6 = #F7F9F9 */
+  /* --background: 192 20% 95%; */
+  --background: 200 20% 96.27%; /* (#F9F9F9 + (#A3CAD5, 0.1)) / 0.8 = #F4F6F7 */
   --foreground: 220 25% 10%;
 
-  --card: 0 0% 100%;
+  --card: 0 0% 100% / 0.85;
   --card-foreground: 220 25% 10%;
 
   --popover: 0 0% 100%;
@@ -33,7 +38,7 @@
   --destructive: 0 72% 51%;
   --destructive-foreground: 0 0% 100%;
 
-  --border: 0, 0%, 0%, 0.08 /* 30, 4.348%, 90.98% */ /* 210 20% 90% */;
+  --border: 0, 0%, 0%, 0.1 /* 30, 4.348%, 90.98% */ /* 210 20% 90% */;
   --input: 210 20% 90%;
   --ring: 173 80% 40%;
 
