[~] Змінив products на lineItems

--- a/app/(Dashboard)/dashboard.css
+++ b/app/(Dashboard)/dashboard.css
@@ -14,7 +14,7 @@
   /* --background: 180 20% 97%; */ /* (#F9F9F9 + (#A3CAD5, 0.1)) / 0.6 = #F7F9F9 */
   /* --background: 192 20% 95%; */
   --background: 200 20% 96.27%; /* (#F9F9F9 + (#A3CAD5, 0.1)) / 0.8 = #F4F6F7 */
-  --foreground: 220 25% 10%;
+  --foreground: 220 25% 10%; 
 
   --card: 0 0% 100% / 0.85;
   --card-foreground: 220 25% 10%;
@@ -24,7 +24,7 @@
 
   /* --primary: 160 84% 39%; */
   --primary: 193.2, 37.3%, 73.7%;
-  --primary-foreground: 0 0% 100%;
+  --primary-foreground: 0, 0%, 0%, 0.7;
 
   --secondary: 210 20% 96%;
   --secondary-foreground: 220 25% 20%;
