--- a/app/(Dashboard)/dashboard.css
+++ b/app/(Dashboard)/dashboard.css
@@ -375,3 +375,8 @@
 [data-theme="dashboard"] .border-input {
   border-color: rgba(0,0,0, 0.11);
 }
+
+[data-theme="dashboard"] #side-panel label {
+  display: inline-block;
+  margin-bottom: 8px;
+}
