[~] Додав елемент slider radix. Змінив стилі чи пофіксив елементи форми і інпути, текстареа, селект, label

--- a/app/(Dashboard)/dashboard.css
+++ b/app/(Dashboard)/dashboard.css
@@ -391,6 +391,7 @@
 
 [data-theme="dashboard"] input,
 [data-theme="dashboard"] textarea,
-[data-theme="dashboard"] select {
+[data-theme="dashboard"] select,
+[data-theme="dashboard"] [role="combobox"] {
   --tw-ring-color: var(--focus-ring-color, hsl(var(--ring)));
 }
